# tiny_engine

./: CMakeLists.txt  compile_commands.json  fragment_shader.glsl  fragment_shader2.glsl  main.cpp  mesh.h  shader.cpp  shader.h  vertex_shader.glsl
.cache/clangd/index/: _fixes.hpp.C1C91C2E45C686FE.idx  _vectorize.hpp.B797FEAE70CB0D65.idx  common.hpp.573389CC4FAD0203.idx  compute_common.hpp.92F0E1AAE73B395E.idx  compute_vector_decl.hpp.54A6A119D5DC7F34.idx  compute_vector_relational.hpp.AF50429217513A16.idx  constants.hpp.80ED9C1290D98B31.idx  constants.inl.300BCF38710C10EE.idx  epsilon.hpp.E38E53A50E0CC6FF.idx  epsilon.inl.03C9A3234910EB6C.idx  exponential.hpp.F488355E4967DEE7.idx  func_common.inl.151A676EAE89C716.idx  func_exponential.inl.267E80E5191F7089.idx  func_geometric.inl.27241CF6F98752BC.idx  func_integer.inl.0CD3E8C15FCC92F5.idx  func_matrix.inl.B260BFDD9D620DAE.idx  func_packing.inl.59350AF631E1B5C5.idx  func_trigonometric.inl.A1EC18A7B5302724.idx  func_vector_relational.inl.4746FF4602EB29E5.idx  fwd.hpp.774FB16C99884545.idx  geometric.hpp.92762EFFEF3CBB65.idx  glad.c.3B24F7F125B4711F.idx  glad.c.889A744814323457.idx  glad.c.A25FA1436248475E.idx  glad.h.23FB370B3B2D1D21.idx  glad.h.9AA6DF5B25560C4F.idx  glad.h.CE1F125AA541D0CD.idx  glm.hpp.ED9AFBCE0913348D.idx  integer.hpp.62211EB30C9DD6E8.idx  khrplatform.h.278E3FD998684D7E.idx  khrplatform.h.286847F2EA163973.idx  khrplatform.h.87B38CD44B5E0CC3.idx  main.cpp.2C6EB3D652772FDF.idx  main.cpp.DE4556001A3AE7F6.idx  main.cpp.F3C20AF01D8415D3.idx  mat2x2.hpp.8FFEE4E7DAEDC763.idx  mat2x3.hpp.B6B093E0BB5C7D2C.idx  mat2x4.hpp.3A841069A8A857C1.idx  mat3x2.hpp.FE4D8FF88EC77616.idx  mat3x3.hpp.E808A414E2FAF3F1.idx  (+160 more)
archive/: rainbow_triangle.cpp
